fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   overflow-y: hidden;
   overflow-x: hidden;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .App-logo {
